Archive2/3b/831e9e6c58a6dd/output
main.cpp:12:7: error: calling a private constructor of class 'A'
    A a{};
      ^
main.cpp:4:5: note: declared private here
    A() = default;
    ^
1 error generated.
